--- a/Equidna/Views/Home/Cubic.cshtml
+++ b/Equidna/Views/Home/Cubic.cshtml
@@ -6,6 +6,11 @@
 <h2>Modelo cúbico</h2>
 
 <div id="FormulaDisplayDiv"></div>
+<input id="number" type="number" step="0.01"  onchange="updateFromNumber();" />
+<input id="number1" type="number" step="0.01" onchange="updateFromNumber();" />
+<input id="number2" type="number" step="0.01"  onchange="updateFromNumber();" />
+<input id="number3" type="number" step="0.01" onchange="updateFromNumber();" />
+
 <div class="row" onload="updateGraph()">
     <div class="col-xs-12">
         <div id="sliderBox" class="jxgbox" style="width:100%;height:100px;"></div>
@@ -31,6 +36,23 @@
     var guidingLine;
     var maxX = 9, minX = -1, maxY = 5, minY = -5;
     var startButton = document.getElementById("start");
+    var numberField = document.getElementById("number");
+    var numberField1 = document.getElementById("number1");
+    var numberField2= document.getElementById("number2");
+    var numberField3 = document.getElementById("number3");
+
+
+
+    var firstUpdate = true;
+
+    function updateFromNumber() {
+        if (firstUpdate) {
+            firstUpdate = false;
+           // 
+            
+           
+        }
+    }
 
     function Start() {
         startButton.disabled = true;
@@ -156,10 +178,17 @@
         velocityFunction.c = c;
         velocityFunction.b = (m * m * (k - c) + h * h * (c - n)) / (m * h * (m - h));
         velocityFunction.a = (n - c - m * velocityFunction.b) / (m * m);
-
         positionFunction = velocityFunction.integrate(cubicIntPoint.Y());
-
+        updatenumbertext();
         updateUI();
+    }
+    //Update number
+    function updatenumbertext() {
+        numberField.value = positionFunction.a;
+        numberField1.value = positionFunction.b;
+        numberField2.value = velocityFunction.c;
+        numberField3.value = positionFunction.d;
+
     }
 
     //  Update UI
