--- a/Equidna/Views/Home/Quadratic.cshtml
+++ b/Equidna/Views/Home/Quadratic.cshtml
@@ -4,8 +4,11 @@
 
 <h2>Modelo cuadrático</h2>
 <div id="FormulaDisplayDiv"></div>
-<input id="number" type="text" onchange="updateFromNumber();" />
-<input id="number2" type="text" onchange="updateFromNumber();" />
+<input id="number3" type="number" step="0.01" onchange="updateFromNumber();" />
+<input id="number2" type="number" step="0.01" onchange="updateFromNumber();" />
+<input id="number" type="number" step="0.01"  onchange="updateFromNumber();" />
+
+
 <div class="row">
     <div class="col-xs-12">
         <div id="sliderBox" class="jxgbox" style="width:100%;height:100px;"></div>
@@ -33,12 +36,14 @@
     var startButton = document.getElementById("start");
     var numberField = document.getElementById("number");
     var numberField2 = document.getElementById("number2");
+    var numberField3 = document.getElementById("number3");
 
     var firstUpdate = true;
 
     function updateFromNumber() {
         if (firstUpdate) {
             firstUpdate = false;
+            quadraticFunction.a = parseFloat(numberField3.value);
             quadraticFunction.c = parseFloat(numberField.value);
             quadraticFunction.b = parseFloat(numberField2.value);
             linearFunction = quadraticFunction.derivate();
@@ -154,6 +159,7 @@
     }
 
     function updateFields() {
+        numberField3.value = quadraticFunction.a;
         numberField.value = quadraticFunction.c;
         numberField2.value = quadraticFunction.b;
     }
