--- a/Equidna/Views/Home/Cubic.cshtml
+++ b/Equidna/Views/Home/Cubic.cshtml
@@ -20,13 +20,161 @@
         <button id="start" onclick="Start()">Start</button>
     </div>
 
+    <div class="col-xs-3">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <table class="table table-bordered table-hover" id="tab_logic">
+                        <thead>
+                        <tr>
+
+                            <th class="text-center">
+                                X
+                            </th>
+                            <th class="text-center">
+                                Y
+                            </th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr id='addr0'>
+
+                            <td>
+                                <input type="text" name='name0' placeholder='X' class="form-control" value="0" style="text-align: center" readonly />
+                            </td>
+                            <td>
+                                <input type="number" id="table1" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                            </td>
+
+                        </tr>
+                        <tr id='addr1'></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-xs-3">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <table class="table table-bordered table-hover" id="tab_logic">
+                        <thead>
+                        <tr>
+
+                            <th class="text-center">
+                                X
+                            </th>
+                            <th class="text-center">
+                                Y
+                            </th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr id='addr0'>
+
+                            <td>
+                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="1" readonly />
+                            </td>
+                            <td>
+                                <input type="number" id="table2" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                            </td>
+
+                        </tr>
+                        <tr id='addr1'></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-xs-3">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <table class="table table-bordered table-hover" id="tab_logic">
+                        <thead>
+                        <tr>
+
+                            <th class="text-center">
+                                X
+                            </th>
+                            <th class="text-center">
+                                Y
+                            </th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr id='addr0'>
+
+                            <td>
+                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
+                            </td>
+                            <td>
+                                <input type="number" id="table3" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                            </td>
+
+                        </tr>
+                        <tr id='addr1'></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+<div class="col-xs-3">
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-12 column">
+                <table class="table table-bordered table-hover" id="tab_logic">
+                    <thead>
+                        <tr>
+
+                            <th class="text-center">
+                                X
+                            </th>
+                            <th class="text-center">
+                                Y
+                            </th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id='addr0'>
+
+                            <td>
+                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
+                            </td>
+                            <td>
+                                <input type="number" id="table4" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                            </td>
+
+                        </tr>
+                        <tr id='addr1'></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
+
     <div class="col-xs-6">
         <div id='VelocityBoard' class='jxgbox' style='width:100%; padding-bottom:100%'></div>
     </div>
-    <div class="col-xs-6">
-        <div id='PositionBoard' class='jxgbox' style='width:100%; padding-bottom:100%'></div>
-    </div>
+<div class="col-xs-6">
+    <div id='PositionBoard' class='jxgbox' style='width:100%; padding-bottom:100%'></div>
 </div>
+</div>
+
+
 
 <script type='text/javascript'>
 
@@ -41,16 +189,30 @@
     var numberField2= document.getElementById("number2");
     var numberField3 = document.getElementById("number3");
 
+    var numtable = document.getElementById("table1");
+    var numtable2 = document.getElementById("table2");
+    var numtable3 = document.getElementById("table3");
+    var numtable4 = document.getElementById("table4");
+
 
 
     var firstUpdate = true;
-
+    //upnumber
     function updateFromNumber() {
         if (firstUpdate) {
             firstUpdate = false;
            // 
             
            
+        }
+    }
+    //uptable
+    function updateFromTable() {
+        if (firstUpdate) {
+            firstUpdate = false;
+            
+
+
         }
     }
 
@@ -188,6 +350,13 @@
         numberField1.value = positionFunction.b;
         numberField2.value = velocityFunction.c;
         numberField3.value = positionFunction.d;
+    }
+    //Update table
+    function updateTable() {
+        numtable.value = positionFunction.a;
+        numtable2.value = positionFunction.b;
+        numtable3.value = velocityFunction.c;
+        numtable4.value = positionFunction.d;
 
     }
 
