--- a/Equidna/Views/Home/Linear.cshtml
+++ b/Equidna/Views/Home/Linear.cshtml
@@ -38,7 +38,7 @@
                                     <input type="text" name='name0' placeholder='X' class="form-control" value="0" style="text-align: center" readonly  />
                                 </td>
                                 <td>
-                                    <input type="number" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                    <input type="number" id="table1" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
                                 </td>
 
                             </tr>
@@ -74,7 +74,7 @@
                                     <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0"  readonly />
                                 </td>
                                 <td>
-                                    <input type="number" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                    <input type="number" id="table2" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
                                 </td>
 
                             </tr>
@@ -106,6 +106,8 @@
     var startButton = document.getElementById("start");
     var numberField = document.getElementById("number");
     var numberField2 = document.getElementById("number2");
+    var numtable = document.getElementById("table1");
+    var numtable2 = document.getElementById("table2");
     var firstUpdate = true;
 
     function updateFromNumber() {
@@ -115,6 +117,15 @@
            // linearPoint = quadraticFunction.derivate();
             updateFunction();
         }
+    }
+
+    function updateFromTable() {
+        if (firstUpdate) {
+            firstUpdate = false;
+            
+            updateFunction();
+        }
+
     }
 
     function Start() {
@@ -193,10 +204,15 @@
         
         velocityFunction.a = constantPoint.Y();
         positionFunction = velocityFunction.integrate(linearPoint.Y());
+         
 
+        //input
         numberField2.value = velocityFunction.a;
         numberField.value = positionFunction.b;
-
+        //table
+        numtable.value = velocityFunction.a;
+        numtable2.value = positionFunction.b;
+        //text html
         FormulaDiv.innerHTML = positionFunction.ToString();
 
         positionBoard.update();
