--- a/Equidna/Views/Home/Cubic.cshtml
+++ b/Equidna/Views/Home/Cubic.cshtml
@@ -77,10 +77,10 @@
                         <tr id='addr0'>
 
                             <td>
-                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="1" readonly />
+                                <input type="number" id="table2" step="0.01" name='name0' placeholder='X' class="form-control" style="text-align: center"   />
                             </td>
                             <td>
-                                <input type="number" id="table2" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                <input type="number" id="table3" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
                             </td>
 
                         </tr>
@@ -113,10 +113,10 @@
                         <tr id='addr0'>
 
                             <td>
-                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
+                                <input type="number"  id="table4" step="0.01" name='name0' placeholder='X' class="form-control" style="text-align: center" />
                             </td>
                             <td>
-                                <input type="number" id="table3" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                <input type="number" id="table5" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
                             </td>
 
                         </tr>
@@ -128,7 +128,6 @@
 
         </div>
     </div>
-
 <div class="col-xs-3">
     <div class="container">
         <div class="row clearfix">
@@ -153,7 +152,7 @@
                                 <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
                             </td>
                             <td>
-                                <input type="number" id="table4" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                <input type="number" id="table6" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
                             </td>
 
                         </tr>
@@ -193,6 +192,8 @@
     var numtable2 = document.getElementById("table2");
     var numtable3 = document.getElementById("table3");
     var numtable4 = document.getElementById("table4");
+    var numtable5 = document.getElementById("table5");
+    var numtable6 = document.getElementById("table6");
 
 
 
@@ -341,22 +342,27 @@
         velocityFunction.b = (m * m * (k - c) + h * h * (c - n)) / (m * h * (m - h));
         velocityFunction.a = (n - c - m * velocityFunction.b) / (m * m);
         positionFunction = velocityFunction.integrate(cubicIntPoint.Y());
+
         updatenumbertext();
+        updateTable();
         updateUI();
     }
     //Update number
     function updatenumbertext() {
-        numberField.value = positionFunction.a;
-        numberField1.value = positionFunction.b;
-        numberField2.value = velocityFunction.c;
-        numberField3.value = positionFunction.d;
+        numberField.value = Math.round(positionFunction.a * 100) / 100;
+        numberField1.value = Math.round(positionFunction.b * 100) / 100;
+        numberField2.value = Math.round(velocityFunction.c * 100) / 100;
+        numberField3.value = Math.round(positionFunction.d * 100) / 100;
     }
     //Update table
     function updateTable() {
-        numtable.value = positionFunction.a;
-        numtable2.value = positionFunction.b;
-        numtable3.value = velocityFunction.c;
-        numtable4.value = positionFunction.d;
+
+        numtable.value = Math.round(quadraticIntPoint.Y() * 100) / 100; 
+        numtable2.value = Math.round(quadraticAxisPoint.X() * 100) / 100; 
+        numtable3.value = Math.round(quadraticAxisPoint.Y() * 100) / 100;
+        numtable4.value = Math.round(quadraticSlopePoint.X() * 100) / 100;
+        numtable5.value = Math.round(quadraticSlopePoint.Y() * 100) / 100;
+        numtable6.value = Math.round(cubicIntPoint.Y() * 100) / 100; 
 
     }
 
