--- a/Equidna/Views/Home/Quadratic.cshtml
+++ b/Equidna/Views/Home/Quadratic.cshtml
@@ -147,6 +147,7 @@
     var numtable = document.getElementById("table1");
     var numtable2 = document.getElementById("table2");
     var numtable3 = document.getElementById("table3");
+    var value;
 
 
 
@@ -182,12 +183,15 @@
         startButton.disabled = true;
         currentTime = parseInt(document.getElementsByName("startTime")[0].value);
         interval = window.setInterval(Step, timeInterval);
-        guidingLine = quadraticBoard.create('line', [[currentTime, minY], [currentTime, maxY]], { straightFirst: false, straightLast: false, strokeWidth: 2 })
+        guidingLine = quadraticBoard.create('line',
+            [[currentTime, minY], [currentTime, maxY]],
+            { straightFirst: false, straightLast: false, strokeWidth: 2 });
     }
 
     function Step()
     {
         currentTime += timeInterval / 1000;
+        
         if (currentTime >= parseInt(document.getElementsByName("endTime")[0].value))
         {
             clearInterval(interval);
@@ -201,7 +205,10 @@
             sliderBox.update();
 
             quadraticBoard.removeObject(guidingLine);
-            guidingLine = quadraticBoard.create('line', [[currentTime, minY], [currentTime, maxY]], { straightFirst: false, straightLast: false, strokeWidth: 2 })
+            guidingLine = quadraticBoard.create('line',
+                [[currentTime, minY], [currentTime, maxY]],
+                { straightFirst: false, straightLast: false, strokeWidth: 2 });
+
         }
     }
 
@@ -277,12 +284,10 @@
     }
 
     function updateAll() {
+        updateGraphs();
         updateFields();
         updateText();
       updateTable();
-        updateGraphs();
-        
-
         firstUpdate = true;
     }
 
@@ -290,13 +295,16 @@
    function updateTable() {
        numtable.value = linearIntPoint.Y();
        numtable2.value = linearSlopePoint.Y();
-        numtable3.value = quadraticFunction.c;
-    }
+       numtable3.value = quadraticPoint.Y();
+   }
     
     function updateFields() {
         numberField3.value = quadraticFunction.a;
         numberField.value = quadraticFunction.c;
         numberField2.value = quadraticFunction.b;
+        numberField3.value = Math.round(numberField3.value * 100) / 100;
+        numberField.value = Math.round(numberField.value * 100) / 100;
+        numberField2.value = Math.round(numberField2.value * 100) / 100;
     }
 
     function updateText() {
