--- a/Equidna/Views/Home/Quadratic.cshtml
+++ b/Equidna/Views/Home/Quadratic.cshtml
@@ -3,11 +3,12 @@
 }
 
 <h2>Modelo cuadrático</h2>
-<div id="FormulaDisplayDiv"></div>
-<input id="number3" type="number" step="0.01" onchange="updateFromNumber();" />
-<input id="number2" type="number" step="0.01" onchange="updateFromNumber();" />
-<input id="number" type="number" step="0.01"  onchange="updateFromNumber();" />
-
+<div><h1 id="FormulaDisplayDiv" style="text-align: center"> </h1></div>
+<div class="col-xs-12 " align="center">
+    <input id="number3" type="number" step="0.01" onchange="updateFromNumber();" />
+    <input id="number2" type="number" step="0.01" onchange="updateFromNumber();" />
+    <input id="number" type="number" step="0.01" onchange="updateFromNumber();" />
+</div>
 
 <div class="row">
     <div class="col-xs-12">
@@ -17,6 +18,8 @@
 
         <button id="start" onclick="Start()">Start</button>
     </div>
+   </div>
+<div class="row">
     <div class="col-xs-4">
         <div class="container">
             <div class="row clearfix">
@@ -89,47 +92,47 @@
 
         </div>
     </div><div class="col-xs-4">
-    <div class="container">
-        <div class="row clearfix">
-            <div class="col-md-12 column">
-                <table class="table table-bordered table-hover" id="tab_logic">
-                    <thead>
-                        <tr>
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <table class="table table-bordered table-hover" id="tab_logic">
+                        <thead>
+                            <tr>
 
-                            <th class="text-center">
-                                X
-                            </th>
-                            <th class="text-center">
-                                Y
-                            </th>
+                                <th class="text-center">
+                                    X
+                                </th>
+                                <th class="text-center">
+                                    Y
+                                </th>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr id='addr0'>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr id='addr0'>
 
-                            <td>
-                                <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
-                            </td>
-                            <td>
-                                <input type="number" id="table3" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
-                            </td>
+                                <td>
+                                    <input type="text" name='name0' placeholder='X' class="form-control" style="text-align: center" value="0" readonly />
+                                </td>
+                                <td>
+                                    <input type="number" id="table3" step="0.01" name='mail0' placeholder='Y' style="text-align: center" class="form-control" />
+                                </td>
 
-                        </tr>
-                        <tr id='addr1'></tr>
-                    </tbody>
-                </table>
+                            </tr>
+                            <tr id='addr1'></tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
+
         </div>
-
     </div>
-</div>
 
     <div class="col-xs-6">
-        <div id='VelocityBoard' class='jxgbox' style='width:100%; padding-bottom:100%'></div>
+        <div id='VelocityBoard' class='jxgbox graphbox' style='user-select: none; overflow: hidden; position: relative;'></div>
     </div>
     <div class="col-xs-6">
-        <div id='PositionBoard' class='jxgbox' style='width:100%; padding-bottom:100%'></div>
+        <div id='PositionBoard' class='jxgbox graphbox' style='user-select: none; overflow: hidden; position: relative;'></div>
     </div>
 </div>
 
@@ -139,7 +142,7 @@
     var interval;
     var timeInterval = 50;
     var guidingLine;
-    var maxX = 9, minX = -1, maxY = 5, minY = -5;
+    var maxX = 9, minX = -1, maxY = 9, minY = -2;
     var startButton = document.getElementById("start");
     var numberField = document.getElementById("number");
     var numberField2 = document.getElementById("number2");
@@ -218,9 +221,9 @@
     var FormulaDiv = document.getElementById("FormulaDisplayDiv");
 
     var quadraticBoard = JXG.JSXGraph.initBoard('PositionBoard', { boundingbox: [minX, maxY, maxX, minY], axis: true, shownavigation: true, showCopyright: false });
-    var linearBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [minX, maxY, maxX, minY], axis: true, shownavigation: false, showCopyright: false });
+    var linearBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [minX, maxY, maxX, minY], axis: true, shownavigation: true, showCopyright: false });
 
-    var sliderBox = JXG.JSXGraph.initBoard('sliderBox', { boundingbox: [-(minY * (maxX - minX)), 5, minY * (maxX - minX), -5], axis: false, shownavigation: false, showCopyright: false, keepAspectRatio: true });
+    var sliderBox = JXG.JSXGraph.initBoard('sliderBox', { boundingbox: [-(minY * (maxX - minX)), 5, minY * (maxX - minX), -5], axis: false, shownavigation: true, showCopyright: false, keepAspectRatio: true });
     var slider = sliderBox.create('slider', [[-(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0, -(minY * (maxX - minX))]], { ticks: { drawLabels: false, highlight: false }, color: "Blue" });
 
     function SnapToGrid(x,y) {
