--- a/Equidna/Views/Shared/_Layout.cshtml
+++ b/Equidna/Views/Shared/_Layout.cshtml
@@ -9,6 +9,14 @@
     @Scripts.Render("~/Scripts/Functions.js")
     @Scripts.Render("~/Scripts/jsxgraphcore.js")
     @Scripts.Render("~/Scripts/GeonextReader.js")
+    <style>
+    .graphbox {
+        width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    }
+
+        </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
